--- a/instagram.html
+++ b/instagram.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Github</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="style/social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/anyeleventura" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/" target="_blank">ACESSE</a>
 </body>
 </html>
