--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="Github"></a>
             <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
             <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
-            <a href="" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
+            <a href="facebook.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
